[gd_scene load_steps=20 format=3 uid="uid://mnhnr63qhtme"]

[ext_resource type="Script" uid="uid://daupix0cgemad" path="res://player/player.gd" id="1_sweqy"]
[ext_resource type="Texture2D" uid="uid://bxwjfc708i7ut" path="res://player/character_demo.png" id="6_g6k8r"]
[ext_resource type="Texture2D" uid="uid://cdweqckq21vod" path="res://player/whack_frame1.png" id="7_8t03j"]
[ext_resource type="Texture2D" uid="uid://qryqw7ds50nt" path="res://player/whack_frame2.png" id="8_2ieo8"]
[ext_resource type="Texture2D" uid="uid://cdugymkcqlq8h" path="res://player/whack_frame3.png" id="9_ebec5"]
[ext_resource type="Texture2D" uid="uid://btv33q0rpcyp3" path="res://player/whack_frame4.1.png" id="10_yllr7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sweqy"]

[sub_resource type="Animation" id="Animation_boad6"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_rgyib"]
resource_name = "dash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_hg6s5"]
resource_name = "walk"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 4]
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6k8r"]
size = Vector2(35, 31)

[sub_resource type="Animation" id="Animation_g6k8r"]
resource_name = "whack"
length = 0.8
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"whack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.566667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../stick/stickShape:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("RectangleShape2D_g6k8r"), SubResource("RectangleShape2D_g6k8r")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../stick/stickShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rgyib"]
_data = {
&"RESET": SubResource("Animation_boad6"),
&"dash": SubResource("Animation_rgyib"),
&"walk": SubResource("Animation_hg6s5"),
&"whack": SubResource("Animation_g6k8r")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_2ieo8"]
atlas = ExtResource("6_g6k8r")
region = Rect2(88, 0, 43, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6k8r"]
atlas = ExtResource("6_g6k8r")
region = Rect2(0, 50, 44, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb6p2"]
atlas = ExtResource("6_g6k8r")
region = Rect2(0, 0, 44, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_wodsf"]
atlas = ExtResource("6_g6k8r")
region = Rect2(176, 0, 44, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_kb6p2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieo8")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6k8r")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb6p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wodsf")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_8t03j")
}, {
"duration": 1.0,
"texture": ExtResource("8_2ieo8")
}, {
"duration": 1.0,
"texture": ExtResource("9_ebec5")
}, {
"duration": 1.0,
"texture": ExtResource("10_yllr7")
}],
"loop": true,
"name": &"whack",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boad6"]
size = Vector2(45, 42)

[node name="player" type="CharacterBody2D"]
scale = Vector2(2, 2)
script = ExtResource("1_sweqy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 10)
scale = Vector2(1, 1.3)
shape = SubResource("RectangleShape2D_sweqy")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Animations")
libraries = {
&"": SubResource("AnimationLibrary_rgyib")
}

[node name="Animations" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kb6p2")

[node name="stick" type="Area2D" parent="."]

[node name="stickShapeR" type="CollisionShape2D" parent="stick"]
position = Vector2(29.5, 7)
shape = SubResource("RectangleShape2D_g6k8r")
disabled = true

[node name="stickShapeL" type="CollisionShape2D" parent="stick"]
position = Vector2(-27, 7)
shape = SubResource("RectangleShape2D_g6k8r")
disabled = true

[node name="InteractionBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionBox"]
position = Vector2(0.5, 0)
scale = Vector2(0.9, 1.1)
shape = SubResource("RectangleShape2D_boad6")

[connection signal="area_entered" from="stick" to="." method="_on_stick_area_entered"]
[connection signal="body_entered" from="stick" to="." method="_on_stick_body_entered"]
